--- a/css/style.css
+++ b/css/style.css
@@ -112,24 +112,6 @@ img {
    padding: 0 var(--margin-2);
 }
 
-/* Phone and tablet */
-@media screen and (max-width: 768px) {
-   .menu_nav {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      background-color: var(--blue);
-      box-shadow: 0 -1px 12px rgba(255, 255, 255, 0.3);
-      width: 100%;
-      height: 4rem;
-      padding: 1rem;
-      display: grid;
-      align-content: center;
-      border-radius: 1.25rem 1.25rem 0 0;
-      transition: 0.4s;
-   }
-}
-
 .list_nav,
 .link_nav {
    display: flex;
@@ -213,12 +195,6 @@ img {
    right: 0;
    bottom: 0;
    width: 295px;
-}
-
-@media screen and (max-width: 480px) {
-   .home_img {
-      width: 260px;
-   }
 }
 
 /* About */
@@ -425,9 +401,33 @@ img {
 }
 
 /* Media Queries */
+/* Mobile Device */
+@media screen and (max-width: 480px) {
+   .home_img {
+      width: 260px;
+   }
+}
 
-/* Desktop */
-@media screen and (min-width: 768px) {
+/* Tablet */
+@media screen and (max-width: 768px) {
+   .menu_nav {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      background-color: var(--blue);
+      box-shadow: 0 -1px 12px rgba(255, 255, 255, 0.3);
+      width: 100%;
+      height: 4rem;
+      padding: 1rem;
+      display: grid;
+      align-content: center;
+      border-radius: 1.25rem 1.25rem 0 0;
+      transition: 0.4s;
+   }
+}
+
+/* Small Screen or Laptop */
+@media screen and (min-width: 769px) {
    .container {
       margin: auto;
       padding: 0 4rem;
@@ -532,5 +532,12 @@ img {
    .footer_container {
       grid-template-columns: repeat(3, 1fr);
       justify-items: center;
+   }
+}
+
+/* Desktop */
+@media screen and (min-width: 1025px) {
+   .container {
+      padding: 0;
    }
 }
